--- a/index.html
+++ b/index.html
@@ -76,13 +76,7 @@
 
     <hr>
     <h1 class="fs-1 fw-semibold mb-4 ps-2">Forecast</h1>
-    <div id="forecast-wrapper" class="d-inline-flex justify-content-center flex-wrap gap-3 mb-5">
-      <div class="forecast-element d-flex flex-column text-center rounded-4 p-2 fw-light placeholder-glow">
-        <p><span class="placeholder h-25 w-50"></span></p>
-        <div class="placeholder-forecast placeholder"></div>
-        <p><span class="placeholder h-25 w-50"></span></p>
-      </div>
-    </div>
+    <div id="forecast-wrapper" class="d-inline-flex justify-content-center flex-wrap gap-3 mb-5"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
